objects/ssot__UnitofMeasureConversion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConversionFactorNumber__c</fullName>
        <label>Conversion Factor</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FromUnitofMeasureId__c</fullName>
        <label>From Unit of Measure</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Unit of Mesaure Conversion Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ToUnitofMeasureId__c</fullName>
        <label>To Unit of Measure</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761232368_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UnitofMeasureConversion_FromUnitofMe_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>UnitofMeasureConversion_FromUnitofMe_rel</relationshipLabel>
        <relationshipName>rel_1697761232368_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761232431_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UnitofMeasureConversion_ToUnitofMeas_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>UnitofMeasureConversion_ToUnitofMeas_rel</relationshipLabel>
        <relationshipName>rel_1697761232431_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>